# bookaslot-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml
backend/: Cargo.toml  Dockerfile  Makefile
backend/migrations/2022-02-21-200858_slots_table/: up.sql
backend/src/models/: schema.rs  test.rs
infraestructure/: deployment_script.sh  docker-compose.prod.yaml  nginx.conf  nginx.dev.conf  nginx.location.config
migrations/2022-02-21-200858_slots_table/: down.sql  up.sql
src/: main.rs  responses.rs
src/models/: db.rs  mod.rs  models.rs  responses.rs  schema.rs
web/: Dockerfile  Dockerfile.dev  Makefile  nginx.conf  package-lock.json  package.json  rollup.config.js
web/src/: BookingApp.svelte  BookingTable.svelte  DateNavigation.svelte  main.js  service.js  stores.js
