[package]
name = "reservations-api"
version = "0.1.0"
edition = "2021"
authors = ["Francisco Revilla <paconte@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres"] }
rand = "0.8.4"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
features = ["diesel_postgres_pool"]